tests/invalid/tuple_index_out_of_bounds/main.py
t: tuple[int, int] = (1, 2)
x: int = t[5]
